# Fortran-Unit-Test

./: .gitignore  CMakeLists.txt  README.md  build.x  build_gfortran.sh  build_gfortran.x  build_ifort.x  build_ifx.sh
.github/workflows/: main.yml
SRC/: CMakeLists.txt  ProjectileMotion.f90  main.f90
TESTS/: CMakeLists.txt  test_ProjectileMotion.pf
src/: CMakeLists.txt  lorentz_force.F90  main.F90  main.f90  projectile_motion.F90  vector_products.F90
tests/: CMakeLists.txt  test_lorentz_force.F90  test_projectile_motion.F90  test_projectile_motion.pf  test_vector_products.F90  test_vector_products.pf
